# Mownit2

./: CMakeLists.txt
Lab1/Zad1/: main.cpp
Lab1/Zad2/: main.cpp
Lab1/Zad3/: main.cpp
Lab1/Zad4/: main.cpp  main2.cpp
Lab2/: CubicInterpolation.cpp  CubicInterpolation.hpp  Enumerator.cpp  Enumerator.hpp  IInterpolation.cpp  IInterpolation.hpp  LagrangeInterpolation.cpp  LagrangeInterpolation.hpp  LinearRegressor.cpp  LinearRegressor.hpp  Templates.cpp  main.cpp
Lab3/: AGHMatrix.cpp  AGHMatrix.hpp  main.cpp
Lab4/: Complex.cpp  Complex.hpp  DFT.cpp  DFT.hpp  FFT.cpp  FFT.hpp  RealDataSets.hpp  main.cpp
Lab4/Plots/: RealDataPlot.py
Lab5/: AGHMatrix.cpp  AGHMatrix.hpp  IterableSolver.cpp  IterableSolver.hpp  main.cpp
Lab5/Plots/: ChartCreator.py
Lab6/: NumericIntegrator.cpp  NumericIntegrator.hpp  main.cpp
Lab6/Plots/: ChartCreator.py
cmake/: FindGSL.cmake
